--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "vue": "^2.5.21"
+  },
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.5.0",
+    "webpack-cli": "^3.2.0",
+    "webpack-merge": "^4.2.2",
     "autoprefixer": "^9.4.5",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -27,18 +34,9 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.2",
-    "vue": "^2.5.21",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.29.0",
-    "webpack-dev-server": "^3.1.14",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "mini-css-extract-plugin": "^0.5.0",
-    "webpack-cli": "^3.2.0"
-  },
-  "devDependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "mini-css-extract-plugin": "^0.5.0",
-    "webpack-cli": "^3.2.0"
+    "webpack-dev-server": "^3.1.14"
   }
 }
