--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build": "npm run clean && npm run build:client",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "clean": "rimraf dist"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +16,6 @@
     "vue": "^2.5.21"
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "mini-css-extract-plugin": "^0.5.0",
-    "webpack-cli": "^3.2.0",
-    "webpack-merge": "^4.2.2",
     "autoprefixer": "^9.4.5",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -27,9 +25,12 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.2",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -37,6 +38,8 @@
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.29.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.2"
   }
 }
